# pace

./: .gitignore  LICENSE  README.md
A1/: .mxproject  CMakeLists.txt
A1/Core/Src/: main.cpp
A1/User/: drv_can.h  drv_communication.cpp  drv_motion.cpp  drv_motion.h  drv_uart.cpp  dvc_motor.cpp
C_TO_A1_A2/: .mxproject  CMakeLists.txt  RC_C_Com.ioc  openocd.cfg
C_TO_A1_A2/Inc/: stm32f4xx_it.h
C_TO_A1_A2/UserCode/: ca_com.c  remote_control.c
C_TO_A1_A2/bsp/boards/: struct_typedef.h
C_TO_A1_A2/cmake/stm32cubemx/: CMakeLists.txt
Motor_Control/: .mxproject  CMakeLists.txt  Makefile  Motor_Control.ioc  servo_node.py
Motor_Control/Core/Src/: main.c  stm32f4xx_hal_msp.c
Motor_Control/cmake/stm32cubemx/: CMakeLists.txt
control/: cmd_vel_to_serial_node.cpp
firmware/a_board/: DiPan.ioc
firmware/a_board/Core/Inc/: main.h  stm32f4xx_it.h
firmware/a_board/Core/Src/: gpio.c  main.c
firmware/a_board/User/: drv_act.cpp  drv_act.h  drv_can.cpp  drv_communication.h  drv_uart.h
firmware/a_board/cmake/stm32cubemx/: CMakeLists.txt
firmware/c_board/Src/: gpio.c  main.c  usart.c
firmware/c_board/UserCode/: ca_com.h  drv_uart.c  drv_uart.h  remote_control.h  usefulFunction.c  usefulFunction.h
pace_ws/src/pace_control/: CMakeLists.txt  cmd_vel_to_serial_node.cpp  package.xml
